Refactor WaterUI documentation and internal architecture
- Updated suspense and error handling documentation to reflect changes in widget imports and error handling mechanisms.
- Introduced the new immediate-mode canvas API and updated related examples for custom rendering.
- Enhanced shader documentation with new usage patterns and examples for WGSL shaders.
- Clarified the rendering pipeline and FFI layer interactions in the internal architecture section.
- Improved hot reload documentation to detail the process and state preservation.
- Revised layout system explanation to include new layout protocols and subview interactions.
- Added best practices for library authors, emphasizing the use of configurable macros and environment context.
- Updated the philosophy section to clarify the design goals of WaterUI.
- Organized the SUMMARY.md to include new internal architecture sections for better navigation.

--- a/src/04-advanced/06-i18n.md
+++ b/src/04-advanced/06-i18n.md
@@ -6,9 +6,9 @@ Translation support lives in the optional `waterui_i18n` crate. It installs as a
 ## Installing the Plugin
 
 ```rust
-use waterui::env::Environment;
+use waterui::prelude::*;
 use waterui_i18n::I18n;
-use waterui_text::locale::Locale;
+use waterui::text::locale::Locale;
 
 fn env_with_i18n() -> Environment {
     let mut i18n = I18n::new();
@@ -30,10 +30,8 @@ Locales are reactive—store a `Binding<Locale>` in the environment and update i
 a new language. Because the plugin uses computed signals, existing text views update automatically.
 
 ```rust
-# use waterui::env::Environment;
 # use waterui::prelude::*;
-# use waterui::reactive::binding;
-# use waterui_text::locale::Locale;
+# use waterui::text::locale::Locale;
 pub fn switch_locale(env: &mut Environment) {
     let locale = binding(Locale("en".into()));
     env.insert(locale.clone());
@@ -49,13 +47,16 @@ store template keys in the map and handle interpolation in your code:
 ```rust
 # use waterui::prelude::*;
 # use waterui_i18n::I18n;
-# use waterui_text::locale::Locale;
+# use waterui::text::locale::Locale;
 pub fn formatted_count() -> impl View {
     let mut i18n = I18n::new();
     i18n.insert("en", "items_label", "items");
     let locale = Locale("en".into());
     let item_count = 3;
-    text!("{count} {text}", count = item_count, text = i18n.get(&locale.0, "items_label"))
+    
+    // In a real app, you would fetch the translation dynamically
+    let label = i18n.get(&locale.0, "items_label");
+    text!("{count} {text}", count = item_count, text = label)
 }
 ```
 
@@ -64,18 +65,17 @@ translation map.
 
 ## Pluralization and Formatting
 
-For locale-aware numbers and dates, reach for `waterui_text::locale`:
+For locale-aware numbers and dates, reach for `waterui::text::locale`:
 
 ```rust
 # use waterui::prelude::*;
-# use waterui::reactive::binding;
-# use waterui_text::locale::{Currency, Locale};
-# use waterui::Binding;
-use waterui_text::Text;
+# use waterui::text::locale::{DateFormatter, Locale};
+# use time::Date;
 
-pub fn formatted_amount() -> impl View {
-    let amount = binding(42.50_f32);
-    Text::format(amount, Currency::new(Locale("en".into())))
+pub fn formatted_date() -> impl View {
+    let date = binding(Date::from_calendar_date(2025, 1, 1).unwrap());
+    let formatter = DateFormatter { locale: Locale("en-US".into()) };
+    Text::format(date, formatter)
 }
 ```
 
